--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-boilerplate",
+  "name": "landing",
   "version": "1.0.0",
-  "description": "Basic React Boilerplate",
+  "description": "Landing Example",
   "main": "server/index.js",
   "scripts": {
     "build": "webpack --mode=development",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/a-canlas/react-boilerplate.git"
+    "url": "git+https://github.com/a-canlas/landing.git"
   },
   "keywords": [
     "Node",
@@ -21,15 +21,17 @@
   "author": "Anastasia Canlas",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/a-canlas/react-boilerplate/issues"
+    "url": "https://github.com/a-canlas/landing/issues"
   },
-  "homepage": "https://github.com/a-canlas/react-boilerplate#readme",
+  "homepage": "https://github.com/a-canlas/landing#readme",
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "pg": "^8.3.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "session-file-store": "^1.4.0"
   },
@@ -127,5 +129,4 @@
       "react/prop-types": 0
     }
   }
-
 }
