--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-scroll": "^1.8.1",
     "session-file-store": "^1.4.0"
   },
   "devDependencies": {
